components/11-userinfo-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userinfo-api
  namespace: ${NS_SERVICES}
  labels:
    app: userinfo-api
spec:
  selector:
    app: userinfo-api
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
